istio-apisix/mtlsstrict.yaml
# peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtlstrict
  namespace: demo
spec:
  mtls:
    mode: STRICT
