istio-apisix/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-srv
  namespace: ingress-apisix
spec:
  host: apisix-gateway.ingress-apisix.svc.cluster.local
  subsets:
  - name: apisix-ingress-subset
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
