istio-apisix/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: apisix-service-entry
  namespace: ingress-apisix
spec:
  hosts:
  - apisix.rachakondadharmendra.info
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
